assignment-month2 last-semester/kubernetes/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muchtodo-backend
  namespace: muchtodo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: muchtodo-backend
  template:
    metadata:
      labels:
        app: muchtodo-backend
    spec:
      containers:
        - name: backend
          image: muchtodo-backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
